<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/planet_settings">
        <Preference
            android:key="load_planet_file"
            android:title="@string/load_planet_file"
            android:summary="@string/load_planet_summary" />
        <Preference
            android:key="load_planet_url"
            android:title="@string/enter_planet_file_url"
            android:summary="@string/load_planet_summary" />
        <Preference
            android:key="reset_planet"
            android:title="@string/reset_planet"
            android:summary="Restore the default xnet planet" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_network">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="network_use_cellular_data"
            android:title="@string/preferences_network_use_cell_data" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="network_disable_ipv6"
            android:summary="@string/preferences_network_disable_ipv6_summary"
            android:title="@string/preferences_network_disable_ipv6" />
    </PreferenceCategory>
</PreferenceScreen>
